Remove the typescript package from peerDependencies in package.json
NPM keeps complaining about the peer dependency not being satisfied
even though it is, not entirely sure why. grunt-tsc can happily work
with a globally installed typescript package anyway.

--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "grunt": "~0.4.5"
   },
   "peerDependencies": {
-    "grunt": "~0.4.5",
-    "typescript": ">= 1.5.3"
+    "grunt": "~0.4.5"
   },
   "keywords": [
     "gruntplugin",
